--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -10,5 +10,9 @@
   "happySaving": "Happy Saving",
   "happySavingDesc": "Remember to record cash disbursements every day to avoid wasting expenses and make plans to save money so you can buy things as needed. We will help you manage your finances.",
   "startSaving": "Start Saving",
-  "cannotConnect": "Sorry, We're cannot connected to the server."
+  "cannotConnect": "Sorry, We're cannot connected to the server.",
+  "welcomeUser": "Welcome, {userName}!",
+  "cannotAuthenticated": "Sorry, We're cannot authenticate you right now",
+  "welcomeSaver": "Welcome Saver",
+  "loginFirst": "Login first so we can keep your savings data safe in our cloud storage."
 }
